# arlet-6502-mod

./: .gitignore  CMakeLists.txt  Makefile  a.gtkw  cfg.vlt  cpu.v  spi_sram.sv  spi_sram_master.sv  spi_sram_slave.sv  tb1.cpp  tb2.cpp  tb_spi_sram.sv  tt_um_anders_tt_6502.v  v6502_verilator.sv
rtl/: alu_6502.sv  alu_6502.v  async_reset.vh  cfg.vlt  config.vh  cpu_6502.sv  cpu_6502.v  spi_sram_master.sv  spi_sram_slave.sv
sim/basic/: create-vivado-project.tcl  tb_basic.sv  xsim.sh
sim/functional/: CMakeLists.txt  Makefile  cfg.vlt  create-vivado-project.tcl  iver.sh  tb_functional  tb_functional.sv  tb_functional_behav.wcfg  tb_functional_vl.cpp  tb_functional_vl.sv  xsim.sh
sim/functional-spi/: CMakeLists.txt  Makefile  cfg.vlt  primitives_v.v  tb_spi_functional_vl.sv  tb_spi_nl_vl.cpp  tb_spi_nl_vl.sv
sim/mem-files/: basic.mem
sim/spi/: create-vivado-project.tcl  sky130_fd_sc_hd.v  tb_spi_basic.sv  tb_spi_basic_behav.wcfg  tb_spi_nl.sv  tb_spi_nl_behav.wcfg  tb_spi_sram.sv  tb_v.sv  xsim.sh  xsim1.sh
sim/spi-functional/: CMakeLists.txt  Makefile  a.gtkw  cfg.vlt  create-vivado-project.tcl  primitives.v  primitives_v.v  sky130_fd_sc_hd.v  tb_spi_functional.sv  tb_spi_functional_nl.sv  tb_spi_functional_nl_behav.wcfg  tb_spi_functional_vl.cpp  tt_um_anders_tt_6502.nl.v  xsim.sh
sim/utils/: tb_assert.vh  tb_clock.sv  tb_utils.sv
sim/wait-state/: create-vivado-project.tcl  tb_wait_state.sv  xsim.sh
